Closed Bug 1661505 Opened 4 years ago Closed 4 years ago

Weird glitches issues in latest beta version with WebRender enabled

Categories

(Core :: Graphics: WebRender, defect)

Firefox 81
Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox81 --- fixed
firefox82 --- fixed

People

(Reporter: mcbeckler, Assigned: kvark)

References

(Blocks 1 open bug)

Details

Attachments

(4 files)

Attached video bug_observation.mov

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:81.0) Gecko/20100101 Firefox/81.0

Steps to reproduce:

Received latest update, immediately starting having a strange rendering issues when loading pages.

Running macOS 10.13.6 on a 2011 MBP.

Actual results:

It looks like the painting of elements is incomplete when the page is loading. Most block elements seem to all have a similar distorted image, and most text is completely garbled. It's also unusual in that can affect the entire browser, not just the page, but also the URL bar and associated buttons/icons. It was inconsistent to reproduce, but it seems to happen if I visit a opened tab that I had not visited recently. Screen recording of bug is attached.

Expected results:

Normal rendering of webpage.

To clarify, observing the bug in the URL bar was inconsistent to reproduce. I could reproduce this bug consistently by visiting a site that took time to load, such as Reddit.

Seems like it's related to dynamically generated elements rendered after loading.
I've not observed it on any sites that are server-side rendered, only client-side.

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → Web Painting
Product: Firefox → Core

Can you attach your about:support information? Does the bug go away if you change gfx.webrender.force-disabled to true in about:config (and restart?)

Flags: needinfo?(mcbeckler)

Hey Emilio, it does seem to resolve when I set gfx.webrender.force-disabled to true and restart my browser.
I attached my about:support in the comment above, and that grab was from before I set that configuration item.

Let me know if you need anything else!

Flags: needinfo?(mcbeckler)

No, that was super helpful, thanks!

Dzmitry, does this ring any bell?

Component: Web Painting → Graphics: WebRender
Flags: needinfo?(dmalyshau)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Weird layout rendering issues in latest beta version → Weird glitches issues in latest beta version with WebRender enabled

I don't know what this is. It would be most awesome to get a continuous WR capture out of this.
In Nightly, it would be started by hitting "ctrl+shift+6" and stopped by the same combo. The wr-capture folder would appear in the home folder, which needs to be zipped and uploaded somewhere.
@mcbeckler, would you be able to get it?

Flags: needinfo?(dmalyshau) → needinfo?(mcbeckler)

Hey @kvark,

I downloaded nightly, and the effect was much more exaggerated than in the beta channel.
I was able to get the captures, but I don't know which one you'll want, so I'm uploading both.

Flags: needinfo?(mcbeckler)
Attached file wr-capture.zip

The second capture was far too large for Bugzilla, so you should be able to download it here: download link

Let me know if you have any issues downloading it.

Amazing, thank you!
I'll try to look at them tomorrow

Flags: needinfo?(dmalyshau)
Severity: -- → S1

The captures don't show anything strange, they look normal. I wasn't able to replay the "frame" level, since it requires direct composition, which we don't have yet in Wrench, but the "scene" replay is alright. There is a tiny chance that something bad happened to frame building, surely. However, I'm more suspicious of HD3000 GPU in the affected machine. It's very old, and given the state of macOS GL drivers in general, and early Intel drivers in particular, I'd more likely believe this to be a driver/HW issue. This is also supported by the fact we are seeing this as a single occurrence in beta, and this somehow wasn't caught in Nightly.

I suggest us to block WR on HD3000 family on Intel, at least until we have our hands on one of these, and reproduce this.

Flags: needinfo?(dmalyshau)
Assignee: nobody → dmalyshau
Status: NEW → ASSIGNED

I think that's a reasonable solution, and I suspect you're probably right.
Thank you for looking into this!

Blocks: wr-mac
OS: Unspecified → macOS
Hardware: Unspecified → Desktop
See Also: → 1661840
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/93ec62c30174
Blocklist WR on mac Intel HD3000 r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Comment on attachment 9172793 [details]
Blocklist WR on mac Intel HD3000

Beta/Release Uplift Approval Request

  • User impact if declined: macOS users with Intel HD3000 experience glitches and crashes
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It's just a blocklist update, should be harmless
  • String changes made/needed:
Attachment #9172793 - Flags: approval-mozilla-beta?

Comment on attachment 9172793 [details]
Blocklist WR on mac Intel HD3000

Approved for 81.0b5.

Attachment #9172793 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: