Bug 1661505 - Blocklist WR on mac Intel HD3000 r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D88672